--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -40,7 +40,7 @@ might_contain_dag_callable = airflow.utils.file.might_contain_dag_via_default_he
 #
 # Variable: AIRFLOW__CORE__DEFAULT_TIMEZONE
 #
-default_timezone = utc
+default_timezone = Asia/Singapore
 
 # The executor class that airflow should use. Choices include
 # ``LocalExecutor``, ``CeleryExecutor``,
